DRW: Only trash UV and tangent data when using BKE_MESH_BATCH_DIRTY_SHADING

This improves the problem encountered when animating materials on static
meshes but does not fix the core issue. See T55326.